# crumbs

./: .gitignore
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 6bc9b4d4f2a9_initial_schema.py  72f349541bac_split_place_url_into_website_url_google_.py  9bab36c2b1d3_replace_api_key_hash_with_plain_api_key.py  a1b2c3d4e5f6_add_photo_url_to_restaurants.py  c3d4e5f6a7b8_add_password_reset_tokens.py  e2f37dec3d62_add_is_favorite_to_restaurants.py
backend/src/: main.py
backend/src/api/v1/: dependencies.py
backend/src/api/v1/routers/: auth.py  places.py  restaurants.py  reviews.py  tags.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: __init__.py  password_reset_token.py  restaurant.py  review.py  tag.py  user.py
backend/src/repositories/: password_reset_token.py  restaurant.py  review.py  tag.py  user.py
backend/src/schemas/: places.py  restaurant.py  review.py  tag.py  user.py
backend/src/services/: auth.py  email.py  password_reset.py  places.py  restaurant.py  review.py  tag.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  places.ts  restaurants.ts  tags.ts
frontend/src/components/: AddRestaurantModal.tsx  FilterBar.tsx  Layout.tsx  RestaurantCard.tsx  RestaurantModal.tsx
frontend/src/pages/: FavoritesPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ResetPasswordPage.tsx  SavedPage.tsx  TriedPage.tsx
(+2 files in other folders)
